# nvidia-ipmi-oem

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  MAINTAINERS  Makefile.am  README.md  configure.ac  ipmi-whitelist.conf  oem_chassis_handler.cpp  oem_chassis_handler.hpp  oem_global_handler.cpp  oem_global_handler.hpp
Grace/include/: gh-config.hpp  ghoemcommands.hpp  sbmr-bootprogress.hpp
Grace/src/: ghoemcommands.cpp  sbmr-bootprogress.cpp
docs/: nvidia-ipmi-oem.md
include/: Makefile.am  biosversionutils.hpp  commandutils.hpp  dgx-a100-config.hpp  i2c.h  oem_commands.hpp  oemcommands.hpp  oemcommandsBF.hpp  sbmr-bootprogress.hpp  sdrutils.hpp  sensorcommands.hpp  sensorutils.hpp  smbus.hpp  storagecommands.hpp  types.hpp
scripts/: setup_bldenv
src/: oemcommands.cpp  sbmr-bootprogress.cpp  sensorcommands.cpp  smbus.cpp  storagecommands.cpp
src/BF/: chassiscommands.cpp  oemcommands.cpp
src/BF/BF2/: oemcommands.cpp
src/BF/spectre/: oemcommands.cpp
src/disabling-oem-commands/: oemcommands.cpp
